Refactor 32t3.